Integrate new platformsh/client and platformsh/oauth2 libraries
Thanks to the league/oauth2-client dependency, this increases the minimum PHP
requirement from 5.5.9 to 5.6.0. This will therefore require a new major
version of the CLI.

--- a/composer.json
+++ b/composer.json
@@ -3,12 +3,10 @@
     "description": "Platform.sh CLI",
     "license": "MIT",
     "require": {
-        "php": ">=5.5.9",
+        "php": ">=5.6",
         "doctrine/cache": "~1.5",
-        "guzzlehttp/guzzle": "^5.3",
-        "guzzlehttp/ringphp": "^1.1",
         "platformsh/console-form": ">=0.0.20 <2.0",
-        "platformsh/client": ">=0.17.1 <2.0",
+        "platformsh/client": "^2.0@beta",
         "symfony/console": "^3.0 !=3.2.5 !=3.2.6",
         "symfony/yaml": "^3.0 || ^2.6",
         "symfony/finder": "^3.0",
@@ -50,14 +48,9 @@
     "bin": [
         "bin/platform"
     ],
-    "extra": {
-        "patches": {
-            "commerceguys/guzzle-oauth2-plugin": {}
-        }
-    },
     "config": {
         "platform": {
-            "php": "5.5.9"
+            "php": "5.6"
         }
     }
 }
