--- a/.travis.yml
+++ b/.travis.yml
@@ -3,16 +3,8 @@ dist: trusty
 sudo: false
 
 php:
-  - 5.6
-  - hhvm
-  - 7.0
   - 7.1
   - 7.2
-
-matrix:
-  allow_failures:
-    - php: hhvm
-  fast_finish: true
 
 cache:
   directories:
@@ -21,6 +13,10 @@ cache:
 
 install:
   - composer install --no-interaction
+  - composer global require 'drush/drush:^8.0'
+
+env:
+  - PLATFORMSH_CLI_DRUSH=$HOME/.composer/vendor/bin/drush
 
 script:
   - 'curl -H "Accept: text/plain" https://security.sensiolabs.org/check_lock -F lock=@./composer.lock'
